erDiagram
    SOURCE_DATASET ||--o{ EXTRACTION_RUN : records
    DEPARTMENT ||--o{ MUNICIPALITY : contains
    DEPARTMENT ||--o{ PUBLIC_ENTITY : groups
    MUNICIPALITY ||--o{ PUBLIC_ENTITY : locates
    PUBLIC_ENTITY ||--o{ PROCUREMENT_PROCESS : publishes
    PROVIDER ||--o{ PROCUREMENT_PROCESS : awarded
    MODALITY ||--o{ PROCUREMENT_PROCESS : classifies
    CONTRACT_TYPE ||--o{ PROCUREMENT_PROCESS : classifies
    PROCUREMENT_PROCESS ||--o{ CONTRACT : produces
    PUBLIC_ENTITY ||--o{ ANNUAL_PROCUREMENT_PLAN : owns
    ANNUAL_PROCUREMENT_PLAN ||--o{ PAA_ITEM : contains
    PAA_ITEM ||--o{ PAA_PROCESS_MATCH : links
    PROCUREMENT_PROCESS ||--o{ PAA_PROCESS_MATCH : links
    PROCUREMENT_PROCESS ||--o{ RISK_ASSESSMENT : scores
    RISK_ASSESSMENT ||--o{ RISK_REASON : explains
    PROCUREMENT_PROCESS ||--o{ SEMANTIC_COMPARABLE : compares
    PROCUREMENT_PROCESS ||--o{ PROCESS_STATE_HISTORY : changes
    PROCUREMENT_PROCESS ||--o{ HUMAN_REVIEW : reviewed_by
    APP_USER ||--o{ HUMAN_REVIEW : records
